--- a/index.html
+++ b/index.html
@@ -369,8 +369,10 @@
     </div>
   </footer>
   <form class="form" name="issue_report_form" autocomplete="off">
-    <div class="form-title">
-      <p>Leave your contacts and we will call you back </p></div>
+    
+    <div class="modal">
+      <h2>Leave your contacts and we will call you back</h2></div>
+      
     <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
@@ -419,9 +421,10 @@
         <div class="texterea-modal">
         </div>
         <div class="checkbox-form">
-          <label class="checkbox" for="user-privacy">
+          <label class="checkbox" for="user-privacy" aria-label="Accept terms and conditions">
             I accept the terms and conditions of the
-            <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a> </label>
+            <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a>.
+          </label>
         </div>
         <button class="btn-modal" type="submit">Send</button>
       </div>
@@ -429,69 +432,4 @@
   </form>
 
 </body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</backdrop>
-
-</form>
-</div>
-</div>
-</body>
-
 </html>
