--- a/index.html
+++ b/index.html
@@ -367,69 +367,68 @@
     </ul>
     </div>
     </div>
-  </footer>
-  <form class="form" name="issue_report_form" autocomplete="off">
-    
-    <div class="modal">
-      <h2>Leave your contacts and we will call you back</h2></div>
-      
-    <div class="backdrop is-open">
-      <div class="modal">
-        <button type="button" class="modal-close-btn">
-        <svg class="modal-close-icon" width="8px" height="8px">
-          <use href="./images/icons.svg#icon-close-black-18dp-2-1" ></use>
+<div class="modal">
+  <h2>Leave your contacts and we will call you back</h2>
+</div>
+
+<div class="backdrop is-open">
+  <div class="modal">
+    <button type="button" class="modal-close-btn">
+      <svg class="modal-close-icon" width="8px" height="8px">
+        <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+      </svg>
+    </button>
+
+    <div class="group-modal">
+      <label class="form-label" for="user-name">Name</label>
+      <div class="form-icon">
+        <input class="form-input" type="text" name="user-name" id="user-name" />
+        <svg class="icon-input" width="18" height="24">
+          <use href="./images/icons.svg#icon-Frame-1"></use>
         </svg>
-        </button>
-  
-        <div class="group-modal">
-          <label class="form-label" for="user-name">Name</label>
-          <div class="form-icon">
-            <input class="form-input" type="text" name="user-name" id="user-name" />
-            <svg class="icon-input" width="18" height="24">
-            <use href="./images/icons.svg#icon-Frame-1"></use>
-            </svg>
-          </div>
-        </div>
-  
-        <div class="group-modal">
-          <label class="form-label" for="user-tel">Phone</label>
-          <div class="form-icon">
-            <input class="form-input" type="tel" name="user-tel" id="user-tel" />
-            <svg class="icon-input" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-            </svg>
-          </div>
-        </div>
-  
-        <div class="group-modal">
-          <label class="form-label" for="user-email">Email</label>
-          <div class="form-icon">
-            <input class="form-input" type="email" id="user-email" name="user-email" />
-            <svg class="icon-input" width="18" height="24">
-            <use href="./images/icons.svg#icon-email-black-18dp-1-1"></use>
-            </svg>
-          </div>
-        </div>
-  
-        <div class="texterea-modal">
-          <label class="form-label" for="user-comment">Comment</label>
-          <textarea class="form-textarea" name="user-comment" placeholder="Text input" id="user-comment">
-              </textarea>
-        </div>
-  
-        <div class="group-modal"> </div>
-        <div class="texterea-modal">
-        </div>
-        <div class="checkbox-form">
-          <label class="checkbox" for="user-privacy" aria-label="Accept terms and conditions">
-            I accept the terms and conditions of the
-            <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a>.
-          </label>
-        </div>
-        <button class="btn-modal" type="submit">Send</button>
       </div>
     </div>
-  </form>
 
-</body>
+    <div class="group-modal">
+      <label class="form-label" for="user-tel">Phone</label>
+      <div class="form-icon">
+        <input class="form-input" type="tel" name="user-tel" id="user-tel" />
+        <svg class="icon-input" width="18" height="24">
+          <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+        </svg>
+      </div>
+    </div>
+
+    <div class="group-modal">
+      <label class="form-label" for="user-email">Email</label>
+      <div class="form-icon">
+        <input class="form-input" type="email" id="user-email" name="user-email" />
+        <svg class="icon-input" width="18" height="24">
+          <use href="./images/icons.svg#icon-email-black-18dp-1-1"></use>
+        </svg>
+      </div>
+    </div>
+
+    <div class="texterea-modal">
+      <label class="form-label" for="user-comment">Comment</label>
+      <textarea class="form-textarea" name="user-comment" placeholder="Text input" id="user-comment">
+              </textarea>
+    </div>
+
+    <div class="group-modal"> </div>
+    <div class="texterea-modal">
+    </div>
+    <div class="checkbox-form">
+      <label class="checkbox" for="user-privacy" aria-label="Accept terms and conditions">
+        I accept the terms and conditions of the
+        <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a>.
+      </label>
+    </div>
+    <button class="btn-modal" type="submit">Send</button>
+  </div>
+</div>
+</form>
+  </footer>
+  <form class="form" name="issue_report_form" autocomplete="off">
+    </body>
 </html>
