--- a/index.html
+++ b/index.html
@@ -367,10 +367,22 @@
     </ul>
     </div>
     </div>
+    <div class="form-container">
+      <p class="subscribe">Subscribe</p>
+      <form class="form" name="issue_report_form" autocomplete="off">
+    <button class="btn-subscribe" type="submit">Subscribe</button>
+<input class="subscribe-input" type="email" name="user-email-input" id="user-email-input" />
+<svg class="form-input-subscribe" width="18" height="24">
+  <use href="./images/icons.svg#icon-Frame-3"></use>
+</svg>
+      </form>
+    </div>
+     
+      <form class="form" name="issue_report_form" autocomplete="off">
 <div class="modal">
   <h2>Leave your contacts and we will call you back</h2>
 </div>
-
+<form class="form" name="issue_report_form" autocomplete="off">
 <div class="backdrop is-open">
   <div class="modal">
     <button type="button" class="modal-close-btn">
@@ -421,14 +433,15 @@
     <div class="checkbox-form">
       <label class="checkbox" for="user-privacy" aria-label="Accept terms and conditions">
         I accept the terms and conditions of the
-        <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a>.
+        <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a>
       </label>
     </div>
     <button class="btn-modal" type="submit">Send</button>
   </div>
 </div>
 </form>
+</div>
   </footer>
-  <form class="form" name="issue_report_form" autocomplete="off">
+ 
     </body>
 </html>
