--- a/index.html
+++ b/index.html
@@ -367,18 +367,20 @@
     </ul>
     </div>
     </div>
-    <div class="form-container">
-      <p class="subscribe">Subscribe</p>
-      <form class="form" name="issue_report_form" autocomplete="off">
-    <button class="btn-subscribe" type="submit">Subscribe</button>
-<input class="subscribe-input" type="email" name="user-email-input" id="user-email-input" />
-<svg class="form-input-subscribe" width="18" height="24">
-  <use href="./images/icons.svg#icon-Frame-3"></use>
-</svg>
-      </form>
+    <div class="footer-container">
+      <div class="form-container">
+        <p class="subscribe">Subscribe</p>
+        <form class="form" name="issue_report_form" autocomplete="off">
+         
+          <input type="email" name="email" placeholder="E-mail">
+            <button class="btn-footer" type="submit">Subscribe
+              <svg class="form-input-subscribe" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+        </form>
+      </div>
     </div>
-     
-      <form class="form" name="issue_report_form" autocomplete="off">
 <div class="modal">
   <h2>Leave your contacts and we will call you back</h2>
 </div>
@@ -440,7 +442,7 @@
   </div>
 </div>
 </form>
-</div>
+
   </footer>
  
     </body>
