--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         <p class="subscribe">Subscribe</p>
         <form class="form" name="issue_report_form" autocomplete="off">
          
-          <input type="email" name="email" placeholder="E-mail">
+          <input class="form-email" type="email" name="email" placeholder="E-mail">
             <button class="btn-footer" type="submit">Subscribe
               <svg class="form-input-subscribe" width="24" height="24">
                 <use href="./images/icons.svg#icon-Frame-3"></use>
@@ -381,18 +381,16 @@
         </form>
       </div>
     </div>
-<div class="modal">
-  <h2>Leave your contacts and we will call you back</h2>
-</div>
+    <div class="backdrop is-open">
 <form class="form" name="issue_report_form" autocomplete="off">
-<div class="backdrop is-open">
+
   <div class="modal">
     <button type="button" class="modal-close-btn">
       <svg class="modal-close-icon" width="8px" height="8px">
         <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
       </svg>
     </button>
-
+<h2>Leave your contacts and we will call you back</h2>
     <div class="group-modal">
       <label class="form-label" for="user-name">Name</label>
       <div class="form-icon">
