--- a/index.html
+++ b/index.html
@@ -440,8 +440,9 @@
           <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a>
         </label>
       </div>
+      <svg class="btn-modal-send" width="8" height="8"> </svg>
       <button class="btn-modal" type="submit">Send</button>
-  
+      
  </form>
 </div>
 </div>
