--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
   <div class="form-icon">
   <input class="form-input" type="text" name="user-name" id="user-name" />
   <svg class="icon-input" width="18" height="24">
-  <use href="./images/icons.svg#icon-Frame-1"></use>
+  <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
   </svg>
   </div>
   </div>
