--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@
     <div class="footer-container">
     <p class="subscribe">Subscribe</p>
     <form class="form-em" name="issue_report_form" autocomplete="off">
-    <label class="form-label-footer" for="form-email"><input class="form-email" type="email" name="email" placeholder="E-mail"> </label>
+    <label class="form-label-footer" for="form-email">E-mail:</label>
+    <input class="form-email" type="email" name="email" placeholder="E-mail" id="form-email">
     <button class="btn-footer" type="submit">Subscribe
     <svg class="form-input-subscribe" width="24" height="24">
     <use href="./images/icons.svg#icon-Frame-3"></use>
@@ -428,9 +429,10 @@
       </div>
 
       <div class="checkbox-form">
+        <input class="form-inp visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true" />
         <label class="checkbox" for="user-privacy" aria-label="Accept terms and conditions">
-        <input class="form-inp visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" />
-        <label for="user-privacy" value="true" id="user-privacy">
+        
+        <label for="user-privacy">
         <span>I accept the terms and conditions of theI accept the terms and conditions of the
           <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a> </span> </label>
         </label>
@@ -440,5 +442,5 @@
  </form>
 </div>
 </div>
-    </body>
+</body>
 </html>
