--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
     <p class="subscribe">Subscribe</p>
     <form class="form-em" name="issue_report_form" autocomplete="off">
     <label class="form-em-label-footer" for="form-email">E-mail:</label>
-    <input class="form-email" type="email" name="email" placeholder="E-mail" id="form-email">
+    <input class="form-em-email" type="email" name="email" placeholder="E-mail" id="form-email">
     <button class="btn-footer" type="submit">Subscribe
     <svg class="form-input-subscribe" width="24" height="24">
     <use href="./images/icons.svg#icon-Frame-3"></use>
