--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         <label class="checkbox" for="user-privacy" aria-label="Accept terms and conditions">
         
         <label for="user-privacy">
-        <span>I accept the terms and conditions of theI accept the terms and conditions of the
+        <span class="checkbox-form-link"> I accept the terms and conditions of theI accept the terms and conditions of the
           <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a> </span> </label>
         </label>
       </div>
