--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
     <div class="footer-container">
     <p class="subscribe">Subscribe</p>
     <form class="form" name="issue_report_form" autocomplete="off">
-    <label class="form-label" for="form-email">E-mail:</label>
-    <input class="form-email" type="email" name="email" placeholder="E-mail" id="form-email">
+    <label class="form-label-footer" for="form-email">
+      <input class="form-email" type="email" name="email" placeholder="E-mail"> </label>
     <button class="btn-footer" type="submit">Subscribe
     <svg class="form-input-subscribe" width="24" height="24">
     <use href="./images/icons.svg#icon-Frame-3"></use>
