--- a/index.html
+++ b/index.html
@@ -431,9 +431,14 @@
         <input class="form-inp visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true" />
         <label class="checkbox" for="user-privacy" aria-label="Accept terms and conditions">
         
-        <label for="user-privacy">
-        <span class="checkbox-form-link"> I accept the terms and conditions of theI accept the terms and conditions of the
-          <a class="form-link" href="your-privacy-policy-link">Privacy Policy</a> </span> </label>
+        <label class="checkbox" for="user-privacy">
+          <span class="custom-checkbox">
+            <svg class="checkmark" width="10" height="8">
+              <use href="./images/icons.svg#icon-checkmark.svg"></use>
+            </svg>
+          </span>
+          I accept the terms and conditions of the
+          <a class="form-link" href="">Privacy Policy</a>
         </label>
       </div>
       <button class="btn-modal" type="submit">Send</button>
