--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
     <p class="subscribe">Subscribe</p>
     <form class="form" name="issue_report_form" autocomplete="off">
     <label class="form-label-footer" for="form-email">
-      <input class="form-email" type="email" name="email" placeholder="E-mail"> </label>
+      <input class="form-email" type="email" name="email" placeholder="E-mail" id="form-email"> </label>
     <button class="btn-footer" type="submit">Subscribe
     <svg class="form-input-subscribe" width="24" height="24">
     <use href="./images/icons.svg#icon-Frame-3"></use>
@@ -382,7 +382,7 @@
     
     </div>
     </footer>
-<div class="backdrop is-open">
+  <div class="backdrop is-open">
   <div class="modal">
   <button type="button" class="modal-close-btn">
   <svg class="modal-close-icon" width="8" height="8">
@@ -429,8 +429,6 @@
 
       <div class="checkbox-form">
         <input class="form-inp visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true" />
-        <label class="checkbox" for="user-privacy" aria-label="Accept terms and conditions">
-        
         <label class="checkbox" for="user-privacy">
           <span class="custom-checkbox">
             <svg class="checkmark" width="10" height="8">
