--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
   </svg>
   </button>
   <p class="form-title">Leave your contacts and we will call you back</p>
-  <form class="form" name="issue_report_form" autocomplete="off">
+  <form class="formm" name="issue_report_form" autocomplete="off">
   <div class="group-modal">
   <label class="form-label" for="user-name">Name</label>
   <div class="form-icon">
